# resume-chat

./: .gitignore  LICENSE  README.md
api/: .env.example  .gitignore  pyproject.toml  requirements.txt
api/app/: main.py  pdf_loader.py  retrieval.py  router_chat.py  router_contact.py  router_debug.py
api/app/core/: config.py
api/app/routers/: chat.py  debug.py
api/app/services/: __init__.py  retrieval_service.py
docs/: PRD.md  ROADMAP.md
web/: .env.example  package.json
web/app/: page.tsx
web/app/api/chat/: route.ts
web/app/api/contact/: route.ts
web/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatPanel.tsx  MessageItem.tsx  MessageList.tsx
web/lib/: api.ts  schemas.ts  types.ts
