[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "openai>=1.108.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "resend>=2.13.1",
    "tiktoken>=0.11.0",
    "twilio>=9.8.1",
    "uvicorn[standard]>=0.35.0",
]
